[package]
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/kjetilkjeka/s32k144evb.rs"
description = "Board support crate for s32k144evb"
keywords = ["arm", "cortex-m", "s32k144", "template"]
license = "MIT OR Apache-2.0"
name = "s32k144evb"
version = "0.6.1"

[dependencies]
cortex-m = "0.3.1"
bit_field = "0.8.0"
embedded_types = {path = "../embedded_types"}

[dependencies.cortex-m-rt]
version = "0.3.6"
default-features = false

[dependencies.s32k144]
version = "0.6.1"
features = ["rt"]

[dev-dependencies]
cortex-m-rtfm = "0.2.1"

[profile.dev]
opt-level = 0
debug = true
lto = true

[profile.release]
debug = true
lto = true

[features]
default = ["panic-over-serial"]
itm = []
panic-over-itm = ["itm"]
abort-on-panic = ["cortex-m-rt/abort-on-panic"]
panic-over-serial = []