[package]
authors = ["Kjetil Kjeka <kjetilkjeka@gmail.com>", "Tmplt <tmplt@dragons.rocks>"]
categories = ["embedded", "no-std", "hardware-support"]
repository = "https://github.com/kjetilkjeka/s32k144evb.rs"
description = "Board support crate for s32k144evb"
keywords = ["arm", "cortex-m", "s32k144", "template"]
license = "MIT OR Apache-2.0"
name = "s32k144evb"
version = "0.7.0"
edition = "2018"

[dependencies]
cortex-m = "0.5.8"
cortex-m-rt = "0.6.7"
bit_field = "0.9.0"
embedded_types = "0.3.2"

[dependencies.s32k144]
version = "0.10.0"
features = ["rt"]

[dev-dependencies.cortex-m-rtfm]
version = "0.4.0"
features = ["timer-queue"]

[profile.dev]
opt-level = 0
debug = true

[profile.release]
debug = true
lto = true

[features]
default = ["panic-over-serial"]
itm = []
panic-over-itm = ["itm"]
panic-over-serial = []
